network-practice/another-node.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-on-specific-node
  namespace: 
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
  nodeSelector:
    kubernetes.io/hostname: aks-agentpool-21599315-vmss00000c
