network-practice/nginx.pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: nginx-pod1
  namespace: srijan
  labels:
    app: nginx

spec: 
  containers:
    - image: nginx
      name: nginx-container
      ports:
      - containerPort: 80
    # - image: linuxserver/firefox
    #   name: firefox-container
    #   ports: 
    #   - containerPort: 3000
