network-practice/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: network-policy-1
  namespace: srijan
spec: 
  podSelector: 
    matchLabels:
      app: nginx
  # policyTypes:
  #   - Ingress
